manifests/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: headscale
  name: headscale
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: other
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: headscale
  type: ClusterIP
