manifests/headscale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: nginx
  rules:
    - host: "openlab-augsburg.de"
      http:
        paths:
          - path: /
            backend:
              service:
                name: website
                port:
                  name: web
            pathType: Prefix
    - host: "www.openlab-augsburg.de"
      http:
        paths:
          - path: /
            backend:
              service:
                name: website
                port:
                  name: web
            pathType: Prefix
  tls:
    - hosts:
        - "headscale.lab.weltraumpflege.org"
      secretName: ingress-cert
